# FastAPI-Template

./: .pre-commit-config.yaml  README.md  gunicorn_conf.py  pyproject.toml  pytest.ini  requirements.txt  risk_exposure_analysis.html  startup-dev.sh  visual.py
.github/workflows/: continuous-integration.yml
app/: main.py
app/api/routes/: health_check_.py
app/core/: __init__.py  config.py  lifespan_.py
app/core/database/: __init__.py  initialise_postgres.py  postgres.py
app/utils/: __init__.py  configure_logging_.py
devops/: Dockerfile  cloud-build.yaml
tests/: conftest.py
tests/test_api/test_routes/: test_heallthcheck.py
tests/test_core/: test_lifespan.py
tests/test_core/test_database/: test_initialise_postgres.py  test_postgres.py
