[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gohar Shoukat <25367760+goharShoukat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
