[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gohar Shoukat <25367760+goharShoukat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "1.5.3"
numpy = "1.26.4"
matplotlib = "3.8.3"
fastapi = "0.111.0"
uvicorn = "0.27.1"
gunicorn = "22.0.0"
pymongo = "4.7.2"
python-decouple = "3.8"
motor = "3.3.2"
loguru = "0.7.2"
pydantic-settings = "^2.2.1"
mypy = "1.9.0"
geopandas = "0.14.3"
black = "24.3.0"
asyncpg = "0.29.0"
sqlalchemy = "2.0.29"
greenlet = "3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pytest-asyncio = "0.23.6"
httpx = "0.27.0"
pytest-mock = "3.14.0"
pre-commit = "3.7.0"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
follow_imports="skip"
exclude = [
    "^test\\.py$", "conftest.py"
]

[tool.isort]
profile = "black"